force-app/main/default/objects/Product__c/fields/Primary_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Primary_Warehouse__c</fullName>
    <label>Primary Warehouse</label>
    <type>Lookup</type>
    <referenceTo>Warehouse__c</referenceTo>
    <relationshipName>Primary_Warehouses</relationshipName>
</CustomField>