force-app/main/default/objects/Product__c/fields/QuantityOnHand__c.field-meta.xml
<CustomField>
    <fullName>QuantityOnHand__c</fullName>
    <label>Quantity On Hand</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
</CustomField>