force-app/main/default/objects/Product__c/fields/ReorderThreshold__c.field-meta.xml
<CustomField>
    <fullName>ReorderThreshold__c</fullName>
    <label>Reorder Threshold</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
</CustomField>