force-app/main/default/objects/Product__c/fields/Tags__c.field-meta.xml
<CustomField>
    <fullName>Tags__c</fullName>
    <label>Tags</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Seasonal</fullName><default>false</default></value>
            <value><fullName>Clearance</fullName><default>false</default></value>
            <value><fullName>Backorder</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>